--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,13 @@
 {
-	"extends": "../tsconfig.json",
 	"compilerOptions": {
-		"declaration": false,
+		"target": "es2022",
 		"module": "commonjs",
+		"lib": [
+			"es2022",
+			"dom"
+		],
+		"esModuleInterop": true,
+		"declaration": false, //產生.d.ts
 		"outDir": "./build",
 	},
 	"include": [
